<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailLoginActivity">

    <ImageView
        android:id="@+id/emailLoginImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/appNameEmailLoginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/big_text"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginImageView"
        app:layout_constraintVertical_bias="0.059" />

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameEmailLoginTextView"
        app:layout_constraintVertical_bias="0.149">


        <View
            android:id="@+id/emailLoginDivider1"
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/emailLoginEmailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/email" />


        <EditText
            android:id="@+id/emailLoginEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/emailLoginPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/password" />


        <EditText
            android:id="@+id/emailLoginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPassword" />

        <View
            android:id="@+id/emailLoginDivider2"
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginEmailEmailButton"
            style="@style/EmailLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_login" />

        <View
            android:id="@+id/emailLoginDivider3"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notRegisteredLoginTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/not_registered"
                android:gravity="center"
                android:textAlignment="center"/>
            <View
                android:id="@+id/emailLoginDivider4"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/registerLoginTextView"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:gravity="center"
                android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>